syntax = "proto3";

package test.v1;

option go_package = "github.com/cerbos/cerbos/internal/generated/test/v1;testv1";

import "shared/v1/shared.proto";
import "policy/v1/policy.proto";

message CompileTestCase {
    string main_def = 1;
    map<string, policy.v1.Policy> input_defs = 2;
    repeated string want_errors = 3;
}


